<resources>
    <string name="app_name">LandLeaseLocator</string>
    <string name="l_amp_l"><![CDATA[L&L]]></string>
    <string name="land_amp_lease"><![CDATA[Land & Lease]]></string>
    <string name="admin">admin</string>
    <string name="user">user</string>

    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="not_user"><u>not a user ! SignUp</u></string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="retype">Retype Password</string>
    <string name="already"><u>Already a user ? Login</u></string>
    <string name="new_user">Create a new user !</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="about_us">about us</string>
    <string name="LL"> LL Solutions </string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="logout">Logout</string>
    <string name="submit">submit</string>


</resources>
