<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    tools:context=".StartUp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="41dp"
        android:layout_alignParentTop="true"
        app:cardElevation="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:paddingTop="10dp"
                android:text="@string/l_amp_l"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="10dp"
                android:text="@string/land_amp_lease"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_button"
        android:background="@drawable/rounded_button_white"
        android:drawableStart="@drawable/user"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/user"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_above="@+id/admin_button"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/admin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_button_white"
        android:drawableStart="@drawable/admin"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/user"
        android:textSize="18sp"
        android:textStyle="bold" />



</RelativeLayout>